Python Wrapper: Implement Reference Class

--- a/clients/python-wrapper/tests/.pylintrc
+++ b/clients/python-wrapper/tests/.pylintrc
@@ -11,7 +11,8 @@ disable=
     missing-class-docstring,
     missing-function-docstring,
     missing-module-docstring,
-    too-few-public-methods
+    too-few-public-methods,
+    fixme,
 
 [MISCELLANEOUS]
 
