Python Wrapper: Implement Repository Class (#6982)
* Python Wrapper: Implement Repository Class

* Remove match statements

* revert class definition

* revert class definition

* CR Fixes

* CR Fixes

* pylint fixes

* Fix tests

* CR Fixes 3

* CR Fixes 4

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -1013,10 +1013,11 @@ jobs:
           LAKECTL_CREDENTIALS_ACCESS_KEY_ID: ${{ env.LAKEFS_INSTALLATION_ACCESS_KEY_ID }}
           LAKECTL_CREDENTIALS_SECRET_ACCESS_KEY: ${{env.LAKEFS_INSTALLATION_SECRET_ACCESS_KEY }}
           LAKECTL_SERVER_ENDPOINT_URL: http://localhost:8000
+          STORAGE_NAMESPACE: s3://esti-system-testing/${{ github.run_number }}-python-wrapper/${{ steps.unique.outputs.value }}
         with:
           verbose: true
           emoji: true
           job-summary: true
-          custom-arguments: './clients/python-wrapper/tests/system_tests -rP'
+          custom-arguments: './clients/python-wrapper/tests/integration -rP'
           click-to-expand: true
           report-title: 'Python Wrapper System Tests Report'
