--- a/.github/workflows/publish-python-wrapper-client.yaml
+++ b/.github/workflows/publish-python-wrapper-client.yaml
@@ -38,37 +38,19 @@ jobs:
           echo "tag=$(python setup.py --version)" >> $GITHUB_OUTPUT
       id: docver
 
-    - name: Create markdown from docstring 
+    - name: Generate documentation 
       uses: ammaraskar/sphinx-action@master
       with:
         docs-folder: "docs/"
-        pre-build-command: "pip install sphinx-autodoc-typehints"
-        build-command: "sphinx-build -b markdown sphinx _build"
-
-    - name: Setup Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        working-directory: clients/python-wrapper
-        ruby-version: '2.7'
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-
-    - name: Build release as latest
-      working-directory: clients/python-wrapper
-      run: bundle exec jekyll build -d _site -b /
-
-    - name: Build release ${{ steps.docver.outputs.tag }}
-      working-directory: clients/python-wrapper
-      run: bundle exec jekyll build -d _site/${{ steps.docver.outputs.tag }} -b /${{ steps.docver.outputs.tag }}
+        pre-build-command: "pip install sphinx-autodoc-typehints && sphinx-apidoc -o . lakefs sphinx-apidoc --full -A 'Treeverse' -e"
 
     - name: Publish to docs repository
       uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
         API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
       with:
-        source_file: clients/python-wrapper/_site/.
+        source_file: clients/python-wrapper/sphinx/_build/.
         destination_repo: treeverse/docs-lakefs-sdk-python-wrapper
         destination_folder: /
         user_email: 'support@treeverse.io'
         user_name: 'python-docs-action'
-
-# TODO: Publish docs once we decide on documentation process
