--- a/.github/workflows/publish-python-wrapper-client.yaml
+++ b/.github/workflows/publish-python-wrapper-client.yaml
@@ -14,6 +14,7 @@ jobs:
       run: make package-python-wrapper
 
     - name: Publish distribution 📦 to TestPyPI
+      continue-on-error: true
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
