--- a/.github/workflows/publish-python-wrapper-client.yaml
+++ b/.github/workflows/publish-python-wrapper-client.yaml
@@ -14,7 +14,6 @@ jobs:
       run: make package-python-wrapper
 
     - name: Publish Distribution 📦 to TestPyPI
-      continue-on-error: true
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
@@ -43,14 +42,17 @@ jobs:
     - name: Set up Python 3.9
       uses: actions/setup-python@v4
       with:
-        python-version: 3.9
-
+        python-version: '3.9'
+        cache: 'pip'
+        cache-dependency-path: 'clients/python-wrapper/requirements.txt'
+      run:
+        pip install -r requirements.txt
+    
     - name: Generate and Build Documentation
       working-directory: ./clients/python-wrapper/
       run: |
-        echo ${{ steps.docver.outputs.tag }}
-        pip install -r requirements.txt 
         sphinx-apidoc -o docs lakefs sphinx-apidoc --full -A 'Treeverse' -e
+        sphinx-build -b html docs docs/_build/
         sphinx-build -b html docs docs/_build/${{ steps.docver.outputs.tag }}
         cp README.md docs/_build 
 
