--- a/.github/workflows/publish-python-wrapper-client.yaml
+++ b/.github/workflows/publish-python-wrapper-client.yaml
@@ -14,6 +14,7 @@ jobs:
       run: make package-python-wrapper
 
     - name: Publish Distribution 📦 to TestPyPI
+      continue-on-error: true
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
@@ -45,23 +46,20 @@ jobs:
         python-version: '3.9'
         cache: 'pip'
         cache-dependency-path: 'clients/python-wrapper/requirements.txt'
-      run:
-        pip install -r requirements.txt
+    - run:
+        
     
     - name: Generate and Build Documentation
-      working-directory: ./clients/python-wrapper/
       run: |
-        sphinx-apidoc -o docs lakefs sphinx-apidoc --full -A 'Treeverse' -e
-        sphinx-build -b html docs docs/_build/
-        sphinx-build -b html docs docs/_build/${{ steps.docver.outputs.tag }}
-        cp README.md docs/_build 
+        pip install -r clients/python-wrapper/requirements.txt
+        make python-wrapper-gen-docs
 
     - name: Publish to Docs Repository
       uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
       env:
         API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
       with:
-        source_file: clients/python-wrapper/docs/_build/.
+        source_file: clients/python-wrapper/_site/.
         destination_repo: treeverse/docs-lakefs-sdk-python-wrapper
         destination_folder: /
         user_email: 'support@treeverse.io'
