--- a/.github/workflows/publish-python-wrapper-client.yaml
+++ b/.github/workflows/publish-python-wrapper-client.yaml
@@ -2,10 +2,6 @@ name: Publish Python Wrapper Client
 
 on:
   workflow_dispatch:
-    inputs:
-      tag:
-        description: Tag/version to publish
-        required: true
 
 jobs:
   deploy:
@@ -15,7 +11,7 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Python Build and Make Package
-      run: make package-python-wrapper PACKAGE_VERSION=${{ steps.version.outputs.tag }}
+      run: make package-python-wrapper
 
     - name: Publish Distribution 📦 to TestPyPI
       continue-on-error: true
