--- a/.github/workflows/publish-python-wrapper-client.yaml
+++ b/.github/workflows/publish-python-wrapper-client.yaml
@@ -10,10 +10,10 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v4
 
-    - name: Python build and make package
+    - name: Python Build and Make Package
       run: make package-python-wrapper
 
-    - name: Publish distribution 📦 to TestPyPI
+    - name: Publish Distribution 📦 to TestPyPI
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         user: __token__
@@ -23,7 +23,7 @@ jobs:
         repository-url: https://test.pypi.org/legacy/
 
     # TODO: Enable once we're ready for production
-    - name: Publish distribution 📦 to PyPI
+    - name: Publish Distribution 📦 to PyPI
       if: false
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
@@ -32,4 +32,32 @@ jobs:
         packages-dir: clients/python-wrapper/dist/
         verbose: true
 
-# TODO: Publish docs once we decide on documentation process
+    - name: Extract docs version
+      working-directory: ./clients/python-wrapper/
+      shell: bash
+      run: |
+          echo "tag=$(python setup.py --version)" >> $GITHUB_OUTPUT
+      id: docver
+
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+        cache: 'pip'
+        cache-dependency-path: 'clients/python-wrapper/requirements.txt'
+    
+    - name: Generate and Build Documentation
+      run: |
+        pip install -r clients/python-wrapper/requirements.txt
+        make python-wrapper-gen-docs
+
+    - name: Publish to Docs Repository
+      uses: dmnemec/copy_file_to_another_repo_action@v1.1.1
+      env:
+        API_TOKEN_GITHUB: ${{ secrets.PERSONAL_TOKEN }}
+      with:
+        source_file: clients/python-wrapper/_site/.
+        destination_repo: treeverse/docs-lakefs-sdk-python-wrapper
+        destination_folder: /
+        user_email: 'support@treeverse.io'
+        user_name: 'python-docs-action'
