Python Wrapper: LenientNamedTuple (#7005)
* Python Wrapper: LenientNamedTuple

* CR Fixes

* CR Fixes

--- a/clients/python-wrapper/tests/.pylintrc
+++ b/clients/python-wrapper/tests/.pylintrc
@@ -12,6 +12,8 @@ disable=
     missing-function-docstring,
     missing-module-docstring,
     too-few-public-methods,
+    pointless-statement,
+    no-member,
     fixme,
 
 [MISCELLANEOUS]
