Update docker compose minio to use us-east-1 as default region

--- a/test/lakefsfs_contract/docker-compose.yaml
+++ b/test/lakefsfs_contract/docker-compose.yaml
@@ -22,6 +22,7 @@ services:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
       MINIO_DOMAIN: s3.local.lakefs.io
+      MINIO_REGION: us-east-1
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
       interval: 30s
