initialize s3 client with region

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -284,6 +284,7 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           LAKEFS_DATABASE_TYPE: postgres
           LAKEFS_BLOCKSTORE_TYPE: s3
+          LAKEFS_BLOCKSTORE_REGION: us-east-1
           LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID: minio
           LAKEFS_BLOCKSTORE_S3_CREDENTIALS_SECRET_ACCESS_KEY: minio123
 
