fix multipart test and set default region

--- a/test/lakefsfs_contract/docker-compose.yaml
+++ b/test/lakefsfs_contract/docker-compose.yaml
@@ -49,6 +49,7 @@ services:
       - LAKEFS_STATS_ENABLED=false
       - LAKEFS_BLOCKSTORE_LOCAL_PATH=/home/lakefs
       - LAKEFS_BLOCKSTORE_TYPE=s3
+      - LAKEFS_BLOCKSTORE_S3_REGION=us-east-1
       - LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID=minio
       - LAKEFS_BLOCKSTORE_S3_CREDENTIALS_SECRET_ACCESS_KEY=minio123
       - LAKEFS_BLOCKSTORE_S3_ENDPOINT=http://s3.local.lakefs.io:9000
