--- a/.github/workflows/python-wrapper-unit-tests.yaml
+++ b/.github/workflows/python-wrapper-unit-tests.yaml
@@ -18,6 +18,7 @@ jobs:
           filters: |
             client: 
               - 'clients/python-wrapper/**'
+              - '.github/workflows/python-wrapper-unit-tests.yaml'
 
   always-succeed:
     needs: paths-filter
