--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -33,7 +33,9 @@ jobs:
           go-version: "1.21.4"
         id: go
 
-      - uses: bufbuild/buf-setup-action@v1.27.1
+      - uses: bufbuild/buf-setup-action@v1.28.1
+        with:
+          github_token: ${{ github.token }}
 
       - name: Extract version
         shell: bash
