--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -2,6 +2,7 @@ name: Docker
 on:
   release:
     types: [released]
+
   workflow_dispatch:
     inputs:
       tag:
@@ -21,6 +22,8 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          ref: "v1.3.0"
 
       - name: Set up NodeJS
         uses: actions/setup-node@v4
