--- a/.github/workflows/docker-publish.yaml
+++ b/.github/workflows/docker-publish.yaml
@@ -107,6 +107,7 @@ jobs:
           context: .
           target: lakectl
           push: true
+          provenance: false
           platforms: linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
           build-args: VERSION=${{ steps.version.outputs.tag }}
           tags: ${{ steps.lakectl_meta.outputs.tags }}
@@ -117,6 +118,7 @@ jobs:
           context: .
           target: lakefs-plugins
           push: true
+          provenance: false
           platforms: linux/amd64,linux/arm64,darwin/amd64,darwin/arm64
           build-args: VERSION=${{ steps.version.outputs.tag }}
           tags: ${{ steps.lakefs_meta.outputs.tags }}
