test: update esti to use LAKEFSACTION prefix for env

--- a/esti/action_files/action_pre_commit.yaml
+++ b/esti/action_files/action_pre_commit.yaml
@@ -9,4 +9,4 @@ hooks:
     properties:
       url: "{{.URL}}/pre-commit"
       query_params:
-        check_env_vars: "{{"{{ ENV.ACTIONS_VAR }}"}}"
+        check_env_vars: "{{"{{ ENV.LAKEFSACTION_VAR }}"}}"
