UI: update the following packages
* @babel/eslint-parser: from 7.19.1 to 7.23.3
* @rollup/plugin-replace: from 4.0.0 to 5.0.5
* @typescript-eslint/eslint-plugin: from 5.38.0 to 6.13.2
* @typescript-eslint/parser: from 5.38.0 to 6.13.2
* @vitejs/plugin-react: from 3.0.0 to 4.2.1
* @vitejs/plugin-react-swc: from 3.0.1 to 3.5.0
* typescript: from 4.8.3 to 5.3.3
* vite: from 4.0.5 to 5.0.7
* vitest: from 0.29.2 to 1.0.3

--- a/webui/package.json
+++ b/webui/package.json
@@ -2,7 +2,7 @@
   "name": "lakefs-ui",
   "version": "0.1.0",
   "engines": {
-    "node": ">= 16.16.0"
+    "node": ">= 18"
   },
   "scripts": {
     "dev": "vite",
@@ -11,7 +11,7 @@
     "test": "vitest run",
     "test-watch": "vitest",
     "lint": "eslint src --ext .js,.jsx,.ts,.tsx",
-    "typesync": "npx typesync"
+    "typesync": "typesync"
   },
   "dependencies": {
     "@duckdb/duckdb-wasm": "^1.26.0",
@@ -47,8 +47,8 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.19.1",
-    "@rollup/plugin-replace": "^4.0.0",
+    "@babel/eslint-parser": "^7.23.3",
+    "@rollup/plugin-replace": "^5.0.5",
     "@types/bootstrap": "^5.2.6",
     "@types/lodash": "^4.14.185",
     "@types/mdast": "^3.0.10",
@@ -59,10 +59,10 @@
     "@types/react-test-renderer": "^17.0.2",
     "@types/unist": "^2.0.6",
     "@types/validator": "^13.7.7",
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
-    "@vitejs/plugin-react": "^3.0.0",
-    "@vitejs/plugin-react-swc": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
+    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react-swc": "^3.5.0",
     "browserslist": "^4.21.4",
     "cross-env": "^7.0.3",
     "eslint-plugin-compat": "^4.0.2",
@@ -71,11 +71,11 @@
     "react-test-renderer": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "sass": "^1.62.1",
-    "typescript": "^4.8.3",
+    "typescript": "^5.3.3",
     "typesync": "^0.11.1",
     "unified": "^10.1.2",
-    "vite": "^4.0.5",
+    "vite": "^5.0.7",
     "vite-plugin-eslint": "^1.8.1",
-    "vitest": "^0.29.2"
+    "vitest": "^1.0.3"
   }
 }
