--- a/.github/actions/bootstrap-test-lakefs/action.yaml
+++ b/.github/actions/bootstrap-test-lakefs/action.yaml
@@ -24,7 +24,7 @@ runs:
       shell: bash
       run: tar -xf /tmp/generated.tar.gz
     - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1-node16
+      uses: aws-actions/configure-aws-credentials@v4
       with:
         aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
@@ -36,8 +36,8 @@ runs:
       env:
         LAKEFS_STATS_ENABLED: "false"
         LAKEFS_GATEWAYS_S3_DOMAIN_NAME: s3.docker.lakefs.io:8000
+      shell: bash
+      working-directory: ${{ inputs.compose-directory }}
       run: |
         [[ -z "${{ inputs.compose-file }}" ]] && flags="" || flags="-f ${{ inputs.compose-file }}"
         docker-compose ${flags} up ${{ inputs.compose-flags }}
-      shell: bash
-      working-directory: ${{ inputs.compose-directory }}
