Playwright E2E testing infra

--- a/webui/package.json
+++ b/webui/package.json
@@ -51,10 +51,12 @@
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.23.3",
+    "@playwright/test": "^1.40.1",
     "@rollup/plugin-replace": "^5.0.5",
     "@types/bootstrap": "^5.2.10",
     "@types/lodash": "^4.14.202",
     "@types/mdast": "^3.0.10",
+    "@types/node": "^20.10.4",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
@@ -68,9 +70,11 @@
     "@vitejs/plugin-react-swc": "^3.5.0",
     "browserslist": "^4.22.2",
     "cross-env": "^7.0.3",
+    "dotenv": "^16.3.1",
     "eslint-plugin-compat": "^4.2.0",
     "eslint-plugin-react": "^7.33.2",
     "happy-dom": "^12.10.3",
+    "playwright": "^1.40.1",
     "react-test-renderer": "^18.2.0",
     "rollup-plugin-analyzer": "^4.0.0",
     "sass": "^1.69.5",
