Remove pre-configured username and credentials

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -1053,9 +1053,7 @@ jobs:
           LAKEFS_DATABASE_DYNAMODB_ENDPOINT: http://dynamodb:9000
           LAKEFS_DATABASE_DYNAMODB_TABLE_NAME: e2e-test-refstore
           LAKEFS_BLOCKSTORE_TYPE: local
-          LAKEFS_INSTALLATION_USER_NAME: admin
-          LAKEFS_INSTALLATION_ACCESS_KEY_ID: ${{ env.LAKEFS_INSTALLATION_ACCESS_KEY_ID }}
-          LAKEFS_INSTALLATION_SECRET_ACCESS_KEY: ${{env.LAKEFS_INSTALLATION_SECRET_ACCESS_KEY }}
+          LAKEFS_EMAIL_SUBSCRIPTION_ENABLED: true
           LAKEFS_AUTH_ENCRYPT_SECRET_KEY: some random secret string
           LAKEFS_STATS_ENABLED: false
     steps:
