--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -52,8 +52,7 @@ jobs:
         if: steps.restore-cache.outputs.cache-hit != 'true'
         run: |
           make -j3 gen-api VERSION=${{ steps.version.outputs.tag }}
-          mkdir webui/dist
-          touch webui/dist/index.html
+          make gen-ui
           tar -cf /tmp/generated.tar.gz ./pkg ./webui
 
       - name: Store generated code
