--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -9,8 +9,10 @@ on:
 # These permissions are needed to interact with GitHub's OIDC Token endpoint.
 permissions:
   id-token: write
-  contents: read
+  contents: write
   packages: write
+  issues: write
+  pull-requests: write
 
 jobs:
   check-secrets:
