Rename env vars

--- a/.github/workflows/esti.yaml
+++ b/.github/workflows/esti.yaml
@@ -1046,10 +1046,10 @@ jobs:
         ports:
           - '8000:8000'
         env:
-          AWS_ACCESS_KEY_ID: AKIAIOSFDNN7EXAMPLEQ
-          AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
           LAKEFS_DATABASE_TYPE: dynamodb
           LAKEFS_DATABASE_DYNAMODB_ENDPOINT: http://dynamodb:8000
+          LAKEFS_DATABASE_DYNAMODB_AWS_ACCESS_KEY_ID: AKIAIOSFDNN7EXAMPLEQ
+          LAKEFS_DATABASE_DYNAMODB_AWS_SECRET_ACCESS_KEY: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
           LAKEFS_BLOCKSTORE_TYPE: local
           LAKEFS_EMAIL_SUBSCRIPTION_ENABLED: true
           LAKEFS_AUTH_ENCRYPT_SECRET_KEY: some random secret string
